dnl Process this file with autoconf to produce a configure script.
AC_INIT(getsched.c)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(limits.h)
AC_CHECK_HEADERS(sched.h)
dnl Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_PID_T
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_SEARCH_LIBS(sched_getscheduler,posix4)

AC_CONFIG_HEADER(config.h)


AC_OUTPUT(Makefile)
